# PhaseBehavior

./: .gitignore  CMakeLists.txt  README.md
Data/: CMakeLists.txt  InteractionCoefficients.csv  PVTPR.csv  PVTSRK.csv
examples/: BinaryMixturesPXPlot.cpp  BlackOilEstimation.cpp  C1C3C8twoPhaseFlash.cpp  CMakeLists.txt  DensityValidation.cpp  FlashCalculationExample.cpp  GibbsFreeEnergyBinary.cpp  OffendingComposition.cpp  ProblemSet8Point2.cpp
include/: Component.hpp  GeneralizedCubicEoS.hpp  Mixture.hpp
include/PhaseBehavior/: Component.hpp  EquationsOfState.hpp  GeneralizedCubicEoS.hpp  MixingRules.hpp  Mixture.hpp  PengRobinsonEoS.hpp  Phase.hpp  PhaseBehavior.hpp  PhaseEnvelope.hpp  PhaseEquilibrium.hpp
include/PhaseBehavior/BlackOil/: CVD.hpp
include/PhaseBehavior/Data/: CMakeLists.txt  PVT.csv
include/PhaseBehavior/GERG/: BinaryDepartureCoefficients.hpp  BinaryReducingParameters.hpp  Components.hpp  Constants.hpp  GERG2008.hpp  PureFluidHelmholtzCoefficients.hpp  PureIdealHelmholtzCoefficients.hpp  PureResidualHelmholtzCoefficients.hpp  Types.hpp
include/PhaseBehavior/Utilities/: Constants.hpp  Input.hpp  Math.hpp  Numerics.hpp  Types.hpp
include/Utilities/: Math.hpp  Types.hpp
src/: CMakeLists.txt  PhaseBehavior.cpp  PhaseEnvelope.cpp  main.cpp
tests/: CMakeLists.txt  TestBisection.cpp  TestCreateMixture.cpp  TestCreatePengRobinson.cpp  TestCreateSoaveRedlichKwong.cpp  TestCubicRootsFind.cpp  TestNewtonRaphson.cpp  TestNonRandomMixingRule.cpp  TestPhaseProperties.cpp  TestPhaseStability.cpp  TestRachfordRice.cpp  TestRandomMixingRule.cpp  TestSSM.cpp  TestSSMWithNewton.cpp
tests/BlackOil/: BOMHandoutData.csv  CMakeLists.txt  TestBlackOilEstimation.cpp
tests/GERG/: CMakeLists.txt  TestBinaryReducingParameters.cpp
tests/TestMixture/: CMakeLists.txt  InteractionCoefficients.csv  TestCreateMixture.cpp
